# ChangeLog for dev-perl/perl-tk
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/perl-tk/ChangeLog,v 1.43 2008/12/23 18:54:48 robbat2 Exp $

*perl-tk-804.028 (23 Dec 2008)

  23 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> perl-tk-804.027.ebuild,
  +perl-tk-804.028.ebuild:
  Version bump.

  22 Jul 2007; Hans de Graaff <graaff@gentoo.org> perl-tk-804.027.ebuild:
  Drop virtual/x11 references.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  perl-tk-804.027.ebuild:
  Ebuild maintenance

  26 Dec 2006; Timothy Redaelli <drizzt@gentoo.org> perl-tk-804.027.ebuild:
  Add ~x86-fbsd keyword.

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  perl-tk-804.027.ebuild:
  Adding perl dep; fixed DEPEND

  05 Jul 2006; Christian Hartmann <ian@gentoo.org> perl-tk-804.027.ebuild:
  Fixed RDEPEND wrt bug #134781

  14 Jun 2006; Michael Cummings <mcummings@gentoo.org> +files/xorg.patch,
  perl-tk-804.027.ebuild:
  Bug 128326 - modified to build for users that didn't install xorg meta

  12 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  perl-tk-804.027.ebuild:
  Add modular X dependencies.

  22 Jul 2005; Herbie Hopkins <herbs@gentoo.org> perl-tk-804.027.ebuild:
  Multilib fix.

  27 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  -perl-tk-800.024-r1.ebuild, -perl-tk-800.024-r2.ebuild,
  -perl-tk-800.025-r1.ebuild, -perl-tk-800.025.ebuild, perl-tk-804.027.ebuild:
  Cleaning up

  01 Apr 2005; Aron Griffis <agriffis@gentoo.org> perl-tk-804.027.ebuild:
  stable on ia64

  20 Feb 2005; Hardave Riar <hardave@gentoo.org> perl-tk-804.027.ebuild:
  Stable on mips

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  07 Nov 2004; Markus Rothe <corsair@gentoo.org> perl-tk-804.027.ebuild:
  Stable on ppc64; bug #60442

  03 Nov 2004; Bret Curtis <psi29a@gentoo.org> perl-tk-804.027.ebuild:
  marked ~mips for testing
