@@ -3,6 +3,7 @@ AUX xorg.patch 1870 RMD160 fddee4757158997c67d41fbb2ad0ae30c618a511 SHA1 97bea3b
 DIST Tk-804.027.tar.gz 6011130 RMD160 8ef2086efa4d7818bd82cc6d36a4d60ca8654bc7 SHA1 a691b6d38783810e3c3a3266bdcf8baba4aaf7dd SHA256 fc12136d8885168cdb77af4107d0cd8121c329925219355a19bfffe01a1ad8a2
 DIST Tk-804.028.tar.gz 6927637 RMD160 8db5d3376f2374429ef71c38ddd268a73bac437e SHA1 075c751f1388741aa313e002578d2e802668f2e8 SHA256 4c387eb285b2b0581cdf762c7145ebaec6ba57f67d830e92ac26ea8dbecf6c77
 EBUILD perl-tk-804.027.ebuild 1005 RMD160 774602dd8e091bc39256ac798d8d4ad83d1e239e SHA1 4fa5ddca81b889ffa9bfbae1d9fbcd614d04d7e0 SHA256 373cebe839e519a346423d9f26d797ae8ae2d7c9d45b4345fcf339c3e38ccd63
+EBUILD perl-tk-804.028-r1.ebuild 988 RMD160 c40c10782e5835a5c6af84629272ce097e03101a SHA1 f97223223d3da0d4c9ea88629adea457bc403c00 SHA256 36fd9b1f97baf94e03f4a1af69945c1073b56635927ca2a470dbe1c254e8de61
 EBUILD perl-tk-804.028.ebuild 935 RMD160 c6c225fc32beb3d52418e2fff7f436f4a32b575b SHA1 1529cb02e48470a2362088239916c9e2c41dfc3e SHA256 ad1bd832db11fdbfc0cf251ffba5c0de5c2d0773e0f07ee541a7903e1749c754
-MISC ChangeLog 4952 RMD160 e40495a96528253b23dd12605a33b6d82753024d SHA1 88c5cf981c24bf2ece15ad2a6d366c44386f8e5b SHA256 d2c9a4f3ca4adab756b7b7de58a23fecb49165f72697026552afa1de759374b3
+MISC ChangeLog 5263 RMD160 0cd55d3977b70c187fa172a1b4f36bd30c42c425 SHA1 772be9729f7b428b705ceea87254099de086afad SHA256 353acc29d47c0e6c0e98510b20777f1abc7d99ed0a0f225327b1cf8cf6983102
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
